collapsing margin issue in footer resolved

--- a/css/main.css
+++ b/css/main.css
@@ -291,6 +291,10 @@ aside span {
 
 footer {
 	clear: left;
+	overflow: auto;
+}
+
+footer p{
 	text-align: center;
 	margin: 10px auto;
 }
